Fixed text alignment on 160x600

--- a/app/rich/templates/css/160x600.scss
+++ b/app/rich/templates/css/160x600.scss
@@ -37,10 +37,6 @@ html, body {
                 left: -{width}px;
             }
 
-            .background3 {
-                left: 3px;
-            }
-
             img {
                 width: {width}px;
             }
